Add danish translations for blank_slate strings on coupons#index
Ref bfd51f4682d904cf1f548053ec037bfb8b4e32c3

--- a/config/locale/da.yml
+++ b/config/locale/da.yml
@@ -102,6 +102,11 @@ da:
       no_description: 'Ingen beskrivelse'
       dont_expire: Aldrig
 
+    blank_slate:
+      index:
+        no_coupons: 'Ingen rabatkoder fundet'
+        info: "Du har ikke oprettet nogen rabatkoder endnu. De bliver vist her når du har oprettet nogen."
+
   activerecord:
     errors:
       messages:
