Show coupon code in list of current coupons (coupons#index)

--- a/config/locale/da.yml
+++ b/config/locale/da.yml
@@ -36,6 +36,7 @@ da:
       other: '%{count}'
 
     columns:
+      code: 'Rabatkode'
       description: 'Beskrivelse'
       discount: 'Rabat'
       redeemed: 'Indløst'
