--- a/config/locale/en.yml
+++ b/config/locale/en.yml
@@ -35,6 +35,7 @@ en:
       other: '%{count}'
 
     columns:
+      code: 'Code'
       description: 'Description'
       discount: 'Discount'
       redeemed: 'Redeemed'
