--- a/config/locale/da.yml
+++ b/config/locale/da.yml
@@ -93,6 +93,8 @@ da:
         type: 'Type'
         amount: 'Beløb'
         code: 'Rabatkode'
+        min_purchase_price: 'Min Purchase Price.'
+        max_discount_price: 'Max Discount Price.'
         valid_from: 'Gældende fra'
         valid_until: 'Gældende til'
 
@@ -103,6 +105,8 @@ da:
         description: 'Beskriv denne kode, så du kan huske hvorfor den eksisterer.'
         redemption_limit: 'Sæt evt. en grænse for antal indløsninger på denne rabatkode. 0 betyder ubegrænset antal indløsninger.'
         amount: 'Dette er det reelle rabatbeløb. 0–100 for procentsatser, 0 eller større (hele tal) for faste beløber.'
+        min_purchase_price: 'Set the minimum purchase price above which discount can be applied.'
+        max_discount_price: 'Set the maximum discount price.'
         valid_from: 'Hvornår skal denne rabatkode kunne indløses fra.'
         valid_until: 'Hvornår kan denne rabatkode ikke længere indløses. Hvis du ikke sætter denne dato, kan rabatkoden indløses forevigt.'
 
