--- a/config/locale/da.yml
+++ b/config/locale/da.yml
@@ -61,6 +61,9 @@ da:
     columns:
       code: 'Rabatkode'
       description: 'Beskrivelse'
+      min_purchase_price: 'Minimum Purchase Price'
+      max_discount_price: 'Maximum Discount Price'
+      redemption_limit_per_user: 'Redemption limit per user'
       discount: 'Rabat'
       redeemed: 'Indløst'
       expiration: 'Udløb'
@@ -90,6 +93,7 @@ da:
       coupon:
         description: 'Beskrivelse'
         redemption_limit: 'Max. antal indløsninger'
+        redemption_limit_per_user: 'Redemption Limit Per User'
         type: 'Type'
         amount: 'Beløb'
         code: 'Rabatkode'
@@ -104,6 +108,7 @@ da:
         code: 'Kunden indtaster denne kode i forbindelse med købet.'
         description: 'Beskriv denne kode, så du kan huske hvorfor den eksisterer.'
         redemption_limit: 'Sæt evt. en grænse for antal indløsninger på denne rabatkode. 0 betyder ubegrænset antal indløsninger.'
+        redemption_limit_per_user: 'Set how many times a user can use this coupon. Zero means no limit.'
         amount: 'Dette er det reelle rabatbeløb. 0–100 for procentsatser, 0 eller større (hele tal) for faste beløber.'
         min_purchase_price: 'Set the minimum purchase price above which discount can be applied.'
         max_discount_price: 'Set the maximum discount price.'
