--- a/config/locale/en.yml
+++ b/config/locale/en.yml
@@ -60,6 +60,9 @@ en:
     columns:
       code: 'Code'
       description: 'Description'
+      min_purchase_price: 'Minimum Purchase Price'
+      max_discount_price: 'Maximum Discount Price'
+      redemption_limit_per_user: 'Redemption limit per user'
       discount: 'Discount'
       redeemed: 'Redeemed'
       expiration: 'Expiration'
@@ -89,6 +92,7 @@ en:
       coupon:
         description: 'Description'
         redemption_limit: 'Redemption Limit'
+        redemption_limit_per_user: 'Redemption Limit Per User'
         type: 'Type'
         amount: 'Amount'
         code: 'Discount Code'
@@ -103,6 +107,7 @@ en:
         code: 'Customers will inform this code when checking out.'
         description: 'Describe this coupon, so you can remember why it exists.'
         redemption_limit: 'Set how many times this coupon can be used. Zero means no limit.'
+        redemption_limit_per_user: 'Set how many times a user can use this coupon. Zero means no limit.'
         amount: 'This is the actual discount amount. 0-100 for percentage, zero or positive number for amount.'
         min_purchase_price: 'Set the minimum purchase price above which discount can be applied.'
         max_discount_price: 'Set the maximum discount price.'
